# flask_starter

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
flaskr/: __init__.py  user.py
src/: app.py  config.py  wsgi.py
src/flask_starter/: models.py  user.py
tests/integration-tests/: conftest.py  test_app.py  test_user.py
tests/unit-tests/: test_user.py
